--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -166,7 +166,7 @@ ul.nav-items {
 
   .logo-header {
     padding:10px 15px;
-    display:block;
+    display:inline-block;
     img {
       width: 160px;
     }
